--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "2.10.4",
+    "html2pdf.js": "^0.10.1",
     "pinia": "3.0.3",
     "vue": "3.5.17",
     "vue-router": "4.5.1",
-    "html2pdf.js": "^0.10.1"
+    "vuedraggable": "^4.1.0",
+    "vxe-table": "^4.14.8",
+    "xe-utils": "^3.7.8"
   },
   "devDependencies": {
     "@tsconfig/node22": "22.0.2",
